--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     alias(libs.plugins.android.application)
     alias(libs.plugins.jetbrains.kotlin.android)
 }
+apply plugin: 'kotlin-kapt'
 
 android {
     namespace 'com.crypto.currencylist'
@@ -15,6 +16,10 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    dataBinding {
+        enable = true
     }
 
     buildFeatures {
@@ -36,6 +41,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    kapt {
+        correctErrorTypes = true  // Example option
+    }
 }
 
 dependencies {
@@ -43,6 +51,9 @@ dependencies {
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
     implementation libs.material
+    implementation libs.androidx.core.ktx
+    implementation libs.core.ktx
+    implementation libs.androidx.junit.ktx
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
@@ -54,6 +65,21 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.6.8"
     testImplementation libs.mockito.kotlin
     testImplementation "androidx.arch.core:core-testing:2.2.0"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    testImplementation libs.mockk
+    testImplementation libs.kotlin.test.junit
 
     implementation libs.dagger
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.google.dagger:dagger:2.51.1'
+    kapt 'com.google.dagger:dagger-compiler:2.51.1'
+
+    def room_version = "2.4.3"
+
+    implementation libs.androidx.room.runtime
+    kapt "androidx.room:room-compiler:$room_version"
+
+    implementation libs.androidx.lifecycle.viewmodel.ktx
+    implementation libs.androidx.lifecycle.runtime.ktx
 }
