--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
     implementation libs.material
+    implementation libs.core.ktx
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
@@ -62,6 +63,10 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.6.8"
     testImplementation libs.mockito.kotlin
     testImplementation "androidx.arch.core:core-testing:2.2.0"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    testImplementation libs.mockk
+    testImplementation libs.kotlin.test.junit
 
     implementation libs.dagger
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
