--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,9 @@ dependencies {
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
     implementation libs.material
+    implementation libs.androidx.core.ktx
     implementation libs.core.ktx
+    implementation libs.androidx.junit.ktx
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
@@ -75,7 +77,7 @@ dependencies {
 
     def room_version = "2.4.3"
 
-    implementation "androidx.room:room-runtime:$room_version"
+    implementation libs.androidx.room.runtime
     kapt "androidx.room:room-compiler:$room_version"
 
     implementation libs.androidx.lifecycle.viewmodel.ktx
